# wildtrack

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
docs/: ADDING_DETECTORS.md
src/wildtrack/: cli.py  devices.py
src/wildtrack/classifiers/: __init__.py  base.py  registry.py  speciesnet.py
src/wildtrack/detectors/: __init__.py  base.py  community_fish_detector.py  megadetector.py  registry.py
src/wildtrack/pipeline/: incremental.py
src/wildtrack/segmenters/: base.py  sam2_segmenter.py
src/wildtrack/utils/: masks.py  video.py  visualize.py
